# cli_proxy

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/claude/: configs.py  ctl.py  proxy.py
src/codex/: configs.py  ctl.py  proxy.py
src/config/: cached_config_manager.py  config_manager.py
src/core/: base_proxy.py  realtime_hub.py
src/filter/: cached_request_filter.py  request_filter.py
src/ui/: ctl.py  ui_server.py
src/ui/static/: app.js  index.html  realtime-manager.js  style.css
src/utils/: platform_helper.py  usage_parser.py
