[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clp"
version = "1.9.1"
description = "本地CLI代理工具"
authors = [
    {name = "gjp"}
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "gunicorn>=20.0.0; sys_platform != 'win32'",
    "waitress>=2.1.0; sys_platform == 'win32'",
    "psutil>=5.8.0",
    "urllib3>=2.0.0",
    "uvicorn[standard]>=0.30.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
clp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.ui" = ["static/*"]
